comentaire temporaire du glossaries dans makefile

--- a/rapport/Makefile
+++ b/rapport/Makefile
@@ -1,8 +1,8 @@
 rapport.pdf:	rapport.tex
 	pdflatex rapport.tex
-	makeglossaries rapport.glo
-	pdflatex rapport.tex
-	pdflatex rapport.tex
+#	makeglossaries rapport.glo
+#	pdflatex rapport.tex
+#	pdflatex rapport.tex
 
 clean: 
 	rm -f *.glo *.gls *.aux *.tex.backup *.acn *.ist *.toc *.log *.out *.glg *.lot
